# lrg_eegfc

./: .gitignore  .gitmodules  CLAUDE.md  COHERENCE_FC_README.md  README.md  Untitled-1.ipynb  environment.yml  pyproject.toml  sprightly-petting-pelican.md
docs/: developer-guide.md  index.md  overview.md
ipynb/: -.py  DSTCMP_all_distance_measures.ipynb  DSTCMP_permutation_robust.ipynb  FIGMNTGN01.ipynb  FIGMNTGN03.ipynb  FIGMNTGN04.ipynb  MLB-F01.ipynb  NEW_distance_of_distances.ipynb  NEW_standard_disXpat.ipynb  NEW_tree_measures_pat_comparison.ipynb  NEW_ultrametric_distance_pat_comparison.ipynb  NEW_ultrametric_permutation_robust_pat_comparison.ipynb  NEW_ultrametric_rank_correlation_pat_comparison.ipynb  NEW_ultrametric_scaled_distance_pat_comparison.ipynb  TEST_improve_speed.ipynb  TEST_interactive_single_patient.ipynb  UTILS-COHERENCE_NETWORKS.ipynb  UTILS-MUTUAL_INFORMATION_NETWORKS.ipynb  distance_of_distances.ipynb  pat02_corrnet_bands.ipynb  pat02_corrnet_emd.ipynb  poster01.ipynb  poster02.ipynb  tmp.ipynb
ipynb/archive_2025-12-11/: DSTCMP_permutation_robust.ipynb  FIGMNTGN02.ipynb  FIGMNTGN03.ipynb  FIGMNTGN04.ipynb  NEW_standard_disXpat.ipynb  NEW_ultrametric_quantile_rmse_pat_comparison.ipynb  TEST_distance_of_distances.ipynb  TEST_distance_of_distances_2.ipynb  TEST_per_patient_analysis.ipynb  TEST_per_patient_time_windows.ipynb  UTILS-COHERENCE_NETWORKS.ipynb  UTILS-FC_COMPARISON_PIPELINE.ipynb  UTILS-FILEREADER.ipynb  band_pca.ipynb  pat02_corrnet_bands.ipynb  pat02_corrnet_emd.ipynb  poster01.ipynb  single_patient_experiments.ipynb  specific_heat_animation.ipynb  tests.ipynb  tmp.ipynb
ipynb/tutorials/: 03_coherence_fc.ipynb
lrgsglib/src/lrgsglib/: __init__.py
lrgsglib/src/lrgsglib/utils/: __init__.py
lrgsglib/src/lrgsglib/utils/basic/: __init__.py  linalg.py
scripts/: README.md  config.sh  run_full_analysis.sh  run_step.sh
src/: clean_correlation_matrices.py  compare_fc_methods.py  compute_corr_matrices.py  compute_lrg_analysis.py  compute_msc_matrices.py  corr_matrix_band.py  inspect_patient_data.py  script_slanzarv.py  visualize_comparison.py  visualize_correlation.py  visualize_lrg.py  visualize_metastable.py  visualize_msc.py  visualize_phase_reorganization.py
src/lrg_eegfc/: __init__.py  batch_compute.py  cli.py  compare.py  const.py  constants.py  core.py  correlation.py  io.py  notebook.py  plotting.py  shared.py  workflow.py  workflow_cleaning.py  workflow_corr.py  workflow_lrg.py  workflow_msc.py
src/lrg_eegfc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lrg_eegfc/config/: const.py  plotlib.py
src/lrg_eegfc/utils/: __init__.py  corrmat.py
src/lrg_eegfc/utils/clustering/: __init__.py  hierarchical.py
src/lrg_eegfc/utils/coherence/: __init__.py  bands.py  msc.py  sparsify.py  surrogates.py
src/lrg_eegfc/utils/corrmat/: __init__.py  bands.py  base.py  network.py  structures.py  thresholds.py
src/lrg_eegfc/utils/datamanag/: inspect.py  loaders.py  patient.py  patient_robust.py
src/lrg_eegfc/utils/distances/: __init__.py  comparison.py
src/lrg_eegfc/utils/parsers/: corr_matrix_band.py
src/lrg_eegfc/visuals/: __init__.py  compare.py  correlation.py  lrg.py  lrg_backup.py  lrg_revised.py  metastable.py  msc.py  reorganization.py
